Fix grid spacing issue

--- a/src/styles/Hexagons.scss
+++ b/src/styles/Hexagons.scss
@@ -30,10 +30,13 @@ $color-hex-default: #000000;
 .hexagon-container {
   display: grid;
   grid-template-columns: $hex-width $hex-width $hex-width $hex-width;
-  grid-auto-rows: calc(#{$hex-width} - 28.87px / 2);
+  grid-auto-rows: calc(#{$hex-width} - 32px);
   grid-gap: $hex-between $hex-between;
   padding-bottom: $hex-border;
+  margin: 0 auto;
 }
+
+//FP, Lockr, forex, MTG, suave, interview, tinyapp, tweeter
 
 .hexagon {
   background-image: url(https://csshexagon.com/img/meow.jpg);
@@ -150,10 +153,10 @@ $color-hex-default: #000000;
 .hexagon:after {
   content: "";
   position: absolute;
-  top: 0.0000px;
+  top: 0;
   left: 0;
-  width: 250.0000px;
-  height: 144.3376px;
+  width: $hex-width;
+  height: $hex-height;
   z-index: 2;
   background: inherit;
 }
